--- a/recipe.html
+++ b/recipe.html
@@ -2,51 +2,65 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">    
-    <title>지호의 특급 비밀 레시피</title>
-    <link rel="stylesheet" href="css/style.css">    
+    <title>특급 비밀 레시피</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&family=Nanum+Pen+Script&family=Poor+Story&family=Song+Myung&display=swap" rel="stylesheet">
 </head>
-<body>
-    <div class="making">
-    <h1>떡볶이 재료 만들기</h1>
-    <h3>재료</h3>
-    <table class="food">
-        <caption>필요한 재료</caption>
-        <tr>
-            <th>재료</th>
-            <td>떡볶이떡</td>
-            <td>어묵</td>
-            <td>대파</td>
-            <td>설탕</td>
-            <td>간장</td>
-            <td>고춧가루</td>
-            <td>1등급 계란</td>
-        </tr>
-        <tr>
-            <th>개수</th>
-            <td>10개</td>
-            <td>2장</td>
-            <td>1대</td>
-            <td>3스푼</td>
-            <td>2스푼</td>
-            <td>1.5스푼</td>
-            <td>먹을만큼</td>            
-        </tr>
-    </table>    
-    <h3>도구</h3>
-    <ul class = "tools">
-        <li>식칼</li>
-        <li>도마</li>
-        <li>냄비</li>
-    </ul>
-    <h3>만드는 순서</h3>
-    <ol start="0" type="I">
-        <li>(매우 배고픈 상태를 유지한다.)</li>
-        <li>설탕 3스푼, 고추장 2스푼, 간장 2스푼, 고춧가루 1.5스푼 넣고 섞어준다</li>
-        <li>떡, 어묵 대파를 먹기 좋은 크기로 잘라준다</li>
-        <li>냄비에 떡과 어묵을 넣고 물2컵을 넣은 후 양념과 함께 끓여준다</li>
-        <li>떡에 양념이 어느정도 베이면 대파를 넣어준다</li>
-        <li>우걱우걱 먹는다</li>
-    </ol>
+<body>        
+    <div id="container">
+        <header id="title">
+            <h1>떡볶이 재료 만들기<a href="https://www.youtube.com/watch?v=t4Es8mwdYlE" target="_blank"><img src = "images/떡볶이.jpg" alt="떡볶이 사진" width="40px"></a></h1>
+        </header>
+
+        <section id="food">
+            <h2>재료</h2>
+            <table>
+                <caption style="font-size: x-large;">나만 먹는 1인분</caption>
+                <tr>
+                    <th>재료</th>
+                    <td>떡볶이떡</td>
+                    <td>어묵</td>
+                    <td>대파</td>
+                    <td>설탕</td>
+                    <td>간장</td>
+                    <td>고춧가루</td>
+                    <td>1등급 계란</td>
+                </tr>
+                <tr>
+                    <th>개수</th>
+                    <td>30개</td>
+                    <td>2장</td>
+                    <td>1대</td>
+                    <td>3스푼</td>
+                    <td>2스푼</td>
+                    <td>1.5스푼</td>
+                    <td>먹을만큼</td>            
+                </tr>
+            </table>    
+        </section>
+
+        <section id="tools">
+            <h2>도구</h2>
+            <ul>
+                <li>식칼</li>
+                <li>도마</li>
+                <li>냄비</li>
+            </ul>
+        </section>
+        
+        <section id="sequence">
+            <h2>만드는 순서</h2>
+            <ol start="0" type="I">
+                <li>(매우 배고픈 상태를 유지한다.)</li>
+                <li>설탕 3스푼, 고추장 2스푼, 간장 2스푼, 고춧가루 1.5스푼 넣고 섞어준다</li>
+                <li>떡, 어묵 대파를 먹기 좋은 크기로 잘라준다</li>
+                <li>냄비에 떡과 어묵을 넣고 물2컵을 넣은 후 양념과 함께 끓여준다</li>
+                <li>떡에 양념이 어느정도 베이면 대파를 넣어준다</li>
+                <li>우걱우걱 먹는다</li>
+            </ol>
+        </section>
     </div>
 </body>
 </html>
